k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: member
  labels:
    app: frontend
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 034362047320.dkr.ecr.ap-northeast-2.amazonaws.com/cwave01/front:latest  
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-secret
